src/components/pages/home/page-home.css
.intro {
    display: flex;
    flex-direction: column-reverse;
    overflow: auto;
}

.group-photo {
    width: 100%;
    height: auto;
}

.abstract {
    max-width: 600px;
    padding: 0 40px;
    margin: 0;
    color: inherit;
    font-size: 28px;
}

@media (max-width: 56em) {
    .abstract {
        padding: 0 20px;
    }
}

@media (min-width: 888px) {
    .intro {
        display: block;
    }

    .abstract {
        padding: 0;
        max-width: 60%;
    }

    .group-photo {
        width: 80%;
        height: auto;
        float: right;
        shape-outside: polygon(100% 0%, 100% 100%, 0% 100%, 0% 50%, 50% 13%);
    }
}

.body-link {
    color: inherit;
    text-decoration: none;
}

.body-link:hover {
    text-decoration: underline;
}

.partners {
    padding: 40px 0;
}

.partner-logo {
    height: 60px;
    width: auto;
    margin: 16px;
}

